--- a/250824/“CF-VLESS”模式-250824-01.md
+++ b/250824/“CF-VLESS”模式-250824-01.md
@@ -1,3 +1,9 @@
 ![image.png](https://cdn.jsdelivr.net/gh/zzkdm888/note-gen-image-sync@main/2025-08/a27e8784-97ab-42fb-9b71-35c888b206a1.png)
 
 <br>
+
+![image.png](https://cdn.jsdelivr.net/gh/zzkdm888/note-gen-image-sync@main/2025-08/1fbe726e-ea1d-4b0e-a446-ccaa115914a3.png)
+
+<br>
+
+---
